Mantis: 1064 o Added new setting to advanced multiplayer options.  Default value is 'on' o cvar is cl_labelmaps ( default 1 ) o If the cvar is changed the map sprite will dynamically update. o If no labelled minimap exists the default one is displayed o We always write a generated minimap to the normal file
git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@165 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/main/config.cfg
+++ b/main/config.cfg
@@ -92,6 +92,7 @@ cl_forcedefaultfov "0"
 cl_highdetail "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
+cl_labelmaps "1"
 cl_lc "1"
 cl_logocolor "#Valve_Orange"
 cl_logofile "lambda"
