--- a/releases/valve/config.cfg
+++ b/releases/valve/config.cfg
@@ -92,6 +92,7 @@ cl_forcedefaultfov "0"
 cl_highdetail "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
+cl_labelmaps "1"
 cl_lc "1"
 cl_logocolor "#Valve_Orange"
 cl_logofile "lambda"
