Mantis 0001070: o Added cl_gammaramp 1 to the config.cfg to force default usage
git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@215 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/main/config.cfg
+++ b/main/config.cfg
@@ -89,6 +89,7 @@ cl_dlmax "128"
 cl_download_ingame "1"
 cl_dynamiclights "1"
 cl_forcedefaultfov "0"
+cl_gammaramp "1"
 cl_highdetail "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
