--- a/dev/performance-3.0.5/config.cfg
+++ b/dev/performance-3.0.5/config.cfg
@@ -89,6 +89,7 @@ cl_dlmax "128"
 cl_download_ingame "1"
 cl_dynamiclights "1"
 cl_forcedefaultfov "0"
+cl_gammaramp "1"
 cl_highdetail "1"
 cl_himodels "0"
 cl_idealpitchscale "0.8"
