--- a/releases/3.1/source/cl_dll/cl_dll.vcproj
+++ b/releases/3.1/source/cl_dll/cl_dll.vcproj
@@ -113,7 +113,7 @@
 				EnableIntrinsicFunctions="TRUE"
 				OptimizeForProcessor="0"
 				AdditionalIncludeDirectories="&quot;$(SolutionDir)&quot;;U:\inlcude\stlport;U:\include\vgui;U:\include\nexus;U:\include\libpng;U:\include\fmod;U:\include\lua;U:\include\particle;U:\include\zlib"
-				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;AVH_CLIENT;AVH_PLAYTEST_BUILD;$(NOINHERIT);USE_OLDAUTH"
+				PreprocessorDefinitions="NDEBUG;WIN32;_WINDOWS;AVH_CLIENT;USE_OLDAUTH;$(NOINHERIT)"
 				StringPooling="TRUE"
 				RuntimeLibrary="0"
 				RuntimeTypeInfo="TRUE"
