git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@408 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/releases/3.2.0/config.cfg
+++ b/releases/3.2.0/config.cfg
@@ -82,6 +82,7 @@ cl_allowupload "1"
 cl_autohelp "1.0"
 cl_buildmessages "1"
 cl_centerentityid "0.0"
+cl_customcrosshair "0"
 cl_cmdbackup "2"
 cl_cmdrate "30"
 cl_cmhotkeys "qwerasdfzxcv"
