o Added a server variable sv_structurelimit defaulting to 300 o Added sv_structurelimit to both server.cfg and listenserver.cfg o Structurelimit restricts the number of structures in games, except hives, rts and CCs.
git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@427 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/releases/3.2.0/listenserver.cfg
+++ b/releases/3.2.0/listenserver.cfg
@@ -72,6 +72,9 @@ sv_clienttrace 3.5
 ///////////////////////////////
 sv_lan 0
 
+// Forces a limit on structures on the server
+sv_structurelimit 300
+
 // disable clients' ability to pause the server
 pausable 0
 
