--- a/releases/3.2.0/server.cfg
+++ b/releases/3.2.0/server.cfg
@@ -84,6 +84,9 @@ mp_timelimit 60
 ///////////////////////////////
 sv_lan 0
 
+// Forces a limit on structures on the server
+sv_structurelimit 300
+
 // disable clients' ability to pause the server
 pausable 0
 
