o Set "r" to default +movement o Changed description for "Reload" to "Reload/alien movement"
git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@503 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/releases/3.2.0/config.cfg
+++ b/releases/3.2.0/config.cfg
@@ -35,7 +35,7 @@ bind "f" "impulse 100"
 bind "g" "impulse 3"
 bind "l" "impulse 105"
 bind "q" "lastinv"
-bind "r" "+reload"
+bind "r" "+movement"
 bind "s" "+back"
 bind "t" "impulse 201"
 bind "u" "messagemode2"
@@ -82,10 +82,10 @@ cl_allowupload "1"
 cl_autohelp "1.0"
 cl_buildmessages "1"
 cl_centerentityid "0.0"
-cl_customcrosshair "1"
 cl_cmdbackup "2"
 cl_cmdrate "30"
 cl_cmhotkeys "qwerasdfzxcv"
+cl_customcrosshair "1"
 cl_dlmax "128"
 cl_download_ingame "1"
 cl_dynamiclights "1"
@@ -93,7 +93,11 @@ cl_forcedefaultfov "0"
 cl_gammaramp "1"
 cl_highdetail "1"
 cl_himodels "0"
+cl_iconb "221"
+cl_icong "149"
+cl_iconr "0"
 cl_idealpitchscale "0.8"
+cl_labelhivesight "1"
 cl_labelmaps "1"
 cl_lc "1"
 cl_logocolor "#Valve_Orange"
