o Removed the voice- and sound-related signoncommands from ns-hltv.cfg
git-svn-id: https://unknownworlds.svn.cloudforge.com/ns1@533 67975925-1194-0748-b3d5-c16f83f1a3a1

--- a/releases/3.2.0/ns-hltv.cfg
+++ b/releases/3.2.0/ns-hltv.cfg
@@ -43,4 +43,4 @@ localmsg "NS-HLTV Broadcast" 90 5 -1 0.825 FFA000FF
 
 // these commands will be executed on connecting spectator client and may be used
 // to adjust settings for HLTV (for example voice parameters)
-signoncommands "voice_scale 2; voice_overdrive 16; volume 0.5; echo Voice adjusted for NS-HLTV"
+// signoncommands "voice_scale 2; voice_overdrive 16; volume 0.5; echo Voice adjusted for NS-HLTV"
